--- a/app/views/admin/content/_form.html.erb
+++ b/app/views/admin/content/_form.html.erb
@@ -149,5 +149,11 @@
   </div>    
   </div>
 
+  <div class=''>
+    <h4><%= _("Merge") %></h4>
+     <input type = "text" id= "post_merge" name = "Merge" class = 'medium' />
+     <%= submit_tag(_("Merge"), {:class => 'btn'}) %>
+  </div>
+  
 </div>
 
