--- a/app/views/admin/content/_form.html.erb
+++ b/app/views/admin/content/_form.html.erb
@@ -149,5 +149,17 @@
   </div>    
   </div>
   
+
+  
+    <% form_tag('admin/content', method: => 'post') do %>
+      <%= label_tag(:q, "Merge") %>
+      <%= text_field_tag(:q) %>
+      <%= submit_tag("Merge") %>
+    <% end %>
+  
+
+
+
+  
 </div>
 
